[package]
name = "lumen"
version = "2.0.0"
edition = "2024"

[dependencies]
httparse = "1.8"
pulldown-cmark = "0.13.1"
minijinja = { version = "2.16.0", features = ["loader"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
yaml-rust2 = "0.11"
clap = { version = "4.5", features = ["derive"] }
percent-encoding = "2.3"
mime_guess = "2.0"
httpdate = "1.0"
crossbeam-deque = "0.8"
lru = "0.16.3"
tracing = "0.1"
tracing-subscriber = "0.3"
itoa = "1.0"
rustls = "0.23"
rustls-pemfile = "2.1"
rustls-pki-types = "1.7"
ctrlc = "3.4"